[package]
name = "clipboard-sync"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
mio = "0.6.10"
serde = "1.0.15"
serde_json = "1.0.3"
serde_derive = "1.0.15"
clipboard = "0.4.6"
env_logger = "0.5.11"

# nativetls support is currently no released yet, will be 0.7.7
[dependencies.ws]
git = "https://github.com/housleyjk/ws-rs"
features = ["nativetls"]