[package]
name = "clipboard-sync"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
mio = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clipboard = "0.5"
env_logger = "0.6"
ws = {version = "0.8", features = ["native-tls"]}
