[package]
name = "clipboard-sync"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
mio = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clipboard = "0.5"
env_logger = "0.7"
ws = {version = "0.9", features = ["nativetls"]}
err-derive = "0.2.3"

[target."cfg(all(unix, not(any(target_os=\"macos\", target_os=\"android\"))))".dependencies]
smithay-clipboard = "0.4"
smithay-client-toolkit = "0.6.1"